fix: add scrollbar

--- a/style.css
+++ b/style.css
@@ -546,7 +546,7 @@ dialog::backdrop {
   width: 6px;
 }
 .scrollbar-show::-webkit-scrollbar-thumb {
-  border-radius: 4px;
+  border-radius: 0px;
   background-color: rgba(0, 0, 0, .3);
   -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .3);
 }
